Hashtag for discussion track

--- a/index.html
+++ b/index.html
@@ -621,6 +621,7 @@ Cylon.start();
           <h1>Thank you!</h1>
           <h2>@deadprogram</h2>
           <h2>@adzankich</h2>
+          <h3>#sjsCylon</h3>
         </section>
 
       </div>
